fix logo size and navbar collapse from mobile view

--- a/client/components/styles/NavBar.css
+++ b/client/components/styles/NavBar.css
@@ -33,8 +33,8 @@
 }
 
 #nav img {
-  width: 150px;
-  height: 75px;
+  width: 160px;
+  height: 90px;
 }
 
 .nav-link {
